--- a/games/TripleFifteen/styles.css
+++ b/games/TripleFifteen/styles.css
@@ -47,6 +47,7 @@ button {
   cursor: pointer;
   border-radius: 5px;
   transition: background-color 0.2s;
+  margin-bottom: .5em;
 }
 
 button:hover {
